# tpp_rs

./: .gitignore  Cargo.toml  README.md
src/: command.rs  control.rs  main.rs  mediator.rs  tpp_config.rs  vote_counter.rs
src/command_input/: mod.rs  twitch_input.rs
src/command_output/: keyboard.rs  mod.rs
src/renderer/: console.rs  http.rs  mod.rs
src/vote_system/: anarchy.rs  democracy.rs  mod.rs
static/: index.css  index.html  index.js
