[package]
name = "tpp_rs"
version = "0.1.0"
authors = ["ekisu <ramonzitosdesorte@hotmail.com>"]
edition = "2018"

[dependencies]
irc = "0.13"
enigo = "0.0.12"
config = "0.9"
serde = { version = "1.0.8", features = ["derive"] }
serde_json = "1.0.8"
gotham = "0.3.0"
gotham_derive = "0.3.0"
hyper = "0.12.24"
mime = "0.3.13"
streaming-stats = "0.2"
